--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta property="og:title" content="">
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/mdb.css">
+  <link rel="stylesheet" type="text/css" media="screen and (min-width:500px)" href="css/mdb.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">    
 
@@ -264,11 +264,13 @@
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
             </div><!-- /row -->
+                <div class="col-sm-1 hidden-sm">&nbsp;</div>
             <div class="row subtitle-row wow slideInRight">
                 <div class="col-12 col-sm-12 font-light">
-                  <p>Prize information coming soon!</p><i class="icon icon-gift"></i>
+                  <p>Prize information coming soon!<br><br><i class="icon icon-gift"></i></p>
                 </div>
             </div><!-- /row -->
+                <div class="col-sm-1 hidden-sm">&nbsp;</div>
         </div><!-- /container -->
     </div><!-- /slide5 -->
 
