Made changes to site to include new logo. Still working through css bugs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta property="og:title" content="">
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" media="screen and (min-width:500px)" href="css/mdb.css">
+  <link rel="stylesheet" type="text/css" media="screen and (min-width:650px), not (orientation: landscape)" href="css/mdb.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">    
 
@@ -58,13 +58,12 @@
     </nav>
   </section> 
 
-
   <!-- START OF INTRO SECTION -->
   <div class="slide story" id="slide-1">
-    <div class="container verticalcenter text-center">
+    <div class="container">
       <div id="home-row-1" class="row">
-        <div class="col-12">
-          <img class="img-responsive wow fadeInDown" src="images/big2.png" />
+        <div class="col-12 col-sm-12">
+          <img class="img-responsive wow fadeInLeft" src="images/big134.png" />
         </div>
       </div>
       <div id="home-row-2" class="row">
